<?xml version="1.0"?>
<package format="2">
  <name>tesseract_task_composer</name>
  <version>0.21.5</version>
  <description>The Tesseract Task Composer package</description>
  <author email="levi.armstrong@gmail.com">Levi Armstrong</author>
  <maintainer email="levi.armstrong@gmail.com">Levi Armstrong</maintainer>
  <license>Apache 2.0</license>

  <!-- Following recommendations of REP 136 -->
  <buildtool_depend>cmake</buildtool_depend>
  <build_depend>ros_industrial_cmake_boilerplate</build_depend>

  <depend>yaml-cpp</depend>
  <depend>libconsole-bridge-dev</depend>
  <depend>tesseract_common</depend>
  <depend>tesseract_environment</depend>
  <depend>tesseract_command_language</depend>
  <depend>tesseract_motion_planners</depend>
  <depend>tesseract_time_parameterization</depend>
  <depend>taskflow</depend>

  <build_depend>eigen</build_depend>
  <build_export_depend>eigen</build_export_depend>

  <build_depend>libboost-serialization-dev</build_depend>
  <exec_depend>libboost-serialization</exec_depend>

  <test_depend>gtest</test_depend>
  <test_depend>tesseract_support</test_depend>
  <test_depend>tesseract_kinematics</test_depend>
  <test_depend>gperftools</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
